<resources>
    <string name="app_name">Barapp</string>
    <string name="order_menu">Order Menu</string>
    <string name="configure_order_menu">Configure Order Menu</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="header_name">ERC\'69 Barapp</string>
    <string name="settings">Settings</string>
    <string name="menu_update_category">Update Category</string>
    <string name="position">Position: </string>
    <string name="api_key">078da251d6304383a63c93b89ddb99e6</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="payment_options">
        <item>Cash</item>
        <item>Pin</item>
        <item>Tab</item>
    </string-array>
    <string name="payment_options_title">Payment Options</string>

    <string name="login_info">Log-in Info:</string>
    <string name="email">E-Mail</string>
    <string name="email_payleven">barapp69@gmail.com</string>
    <string name="password">Password</string>
    <string name="password_payleven">barapp69</string>
    <string name="start_payment">Start Pin Payment</string>


</resources>
